Fix navigation on IE 11

--- a/src/assets/sass/phoenix/main-menu.scss
+++ b/src/assets/sass/phoenix/main-menu.scss
@@ -1,5 +1,4 @@
 .main-menu {
-
   position: fixed;
   right: 0;
   top: 0;
@@ -62,7 +61,7 @@
 
   .menu {
     top: $hamburgerSize + $nanoPadding;
-    font-family: _font('family-heading');
+    font-family: _font("family-heading");
     font-weight: 400;
     text-transform: uppercase;
     position: absolute;
@@ -83,37 +82,41 @@
 
       &:hover {
         color: _palette(accent);
-        background: _palette(fg)
+        background: _palette(fg);
       }
     }
   }
 
-  .menu:focus,
-  .menu:focus-within,
-  #menu-toggle:checked {
-
+  @mixin when-selected {
     &.menu,
-    &~.menu,
-    &~.search,
-    &~.overlay {
+    & ~ .menu,
+    & ~ .search,
+    & ~ .overlay {
       height: auto;
       opacity: 1;
+      overflow: auto;
       visibility: visible;
     }
-
-    &~.toggle {
+    & ~ .toggle {
       left: 0;
       bottom: 0;
       width: auto;
       z-index: 2;
       height: auto;
     }
-
-    &~.hamburger {
+    & ~ .hamburger {
       color: _palette(bright);
       background: _palette(t-black-60);
     }
   }
 
+  // have to split these to fix ie11
 
+  .menu:focus,
+  #menu-toggle:checked {
+    @include when-selected;
+  }
+  .menu:focus-within {
+    @include when-selected;
+  }
 }
